**7.1.0 (unreleased)**

* Allow constraining versions globally without having to know exactly what will
  be installed by the pip command. :issue:`2731`.

**7.0.3 (2015-06-01)**

* Fixed a regression where ``--no-cache-dir`` would raise an exception, fixes
  :issue:`2855`.


**7.0.2 (2015-06-01)**

* **BACKWARD INCOMPATIBLE** Revert the change (released in v7.0.0) that
  required quoting in requirements files around specifiers containing
  environment markers. (:pull:`2841`)

* **BACKWARD INCOMPATIBLE** Revert the accidental introduction of support for
  options interleaved with requirements, version specifiers etc in
  ``requirements`` files. (:pull:`2841`)

* Expand ``~`` in the cache directory when caching wheels, fixes :issue:`2816`.

* Use ``python -m pip`` instead of ``pip`` when recommending an upgrade command
  to Windows users.


**7.0.1 (2015-05-22)**

* Don't build and cache wheels for non-editable installations from VCSs.

* Allow ``--allow-all-external`` inside of a requirements.txt file, fixing a
  regression in 7.0.


**7.0.0 (2015-05-21)**

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``--mirror``,
  ``--use-mirrors``, and ``-M`` options.

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``zip`` and ``unzip``
  commands.

* **BACKWARD INCOMPATIBLE** Removed the deprecated ``--no-install`` and
  ``--no-download`` options.

* **BACKWARD INCOMPATIBLE** No longer implicitly support an insecure origin
  origin, and instead require insecure origins be explicitly trusted with the
  ``--trusted-host`` option.

* **BACKWARD INCOMPATIBLE** Removed the deprecated link scraping that attempted
  to parse HTML comments for a specially formatted comment.

* **BACKWARD INCOMPATIBLE** Requirements in requirements files containing
  markers must now be quoted due to parser changes from (:pull:`2697`) and
  (:pull:`2725`).  For example, use ``"SomeProject; python_version < '2.7'"``,
  not simply ``SomeProject; python_version < '2.7'``
